# DZOOP14_1

./: main14_2.py  pyproject.toml  readme.md
src/: category.py  product.py  utils.py
test/: conftest.py  test_category.py  test_product.py
tests/: conftest.py  test_category.py
